Add html layout

--- a/ui.html
+++ b/ui.html
@@ -89,5 +89,23 @@
       }
   </style>
 </head>
+<body>
+<div class="container">
+  <div id="loginScreen" class="screen active">
+    <h2>Welcome to KROMA</h2>
+    <p class="subtitle">Connect your account to get started</p>
+    <button id="loginButton" class="primary-button">Login with Your Account</button>
+    <div id="loginMessage" class="message"></div>
+  </div>
 
+  <div id="mainScreen" class="screen">
+    <div class="user-info" id="userInfo"></div>
+    <button id="generateDesign" class="primary-button">Generate Design System</button>
+    <button id="logout" class="secondary-button">Logout</button>
+    <div id="message" class="message"></div>
+  </div>
+</div>
+
+
+</body>
 </html>
