--- a/ui.html
+++ b/ui.html
@@ -106,6 +106,12 @@
   </div>
 </div>
 
+<script>
+  const WEBSITE_URL = 'http://localhost:3000';
+  let authToken = null;
+  const sessionKey = Math.random().toString(36).substr(2, 9);
 
+
+</script>
 </body>
 </html>
